Modificando html e js.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button id="check-btn">Verificar</button>
         <button id="reset-btn">Reiniciar</button>
         <p id="feedback"></p>
+        <p id="attempts">Tentativas restantes: 3</p>
     </div>
     <script src="script.js"></script>
 </body>
