--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
         <h1>Wordle RPG</h1>
         <div id="game-board">
             <div class="row">
-                <div class="cell"><img src="src/img1.png" alt="Image 1" id="img1"></div>
-                <div class="cell"><img src="src/img2.png" alt="Image 2" id="img2"></div>
-                <div class="cell"><img src="src/img3.png" alt="Image 3" id="img3"></div>
-                <div class="cell"><img src="src/img4.png" alt="Image 4" id="img4"></div>
-                <div class="cell"><img src="src/img5.png" alt="Image 5" id="img5"></div>
+                <div class="cell"><img src="src/Bárbara.png" alt="Image 1" id="img1"></div>
+                <div class="cell"><img src="src/Camponesa.png" alt="Image 2" id="img2"></div>
+                <div class="cell"><img src="src/Espadachim.png" alt="Image 3" id="img3"></div>
+                <div class="cell"><img src="src/Guerreira.png" alt="Image 4" id="img4"></div>
+                <div class="cell"><img src="src/Lanceiro.png" alt="Image 5" id="img5"></div>
             </div>
         </div>
         <button id="check-btn">Verificar</button>
         <button id="reset-btn">Reiniciar</button>
         <p id="feedback"></p>
         <p id="attempts">Tentativas restantes: 3</p>
+        <div id="selected-sequence">Sequência Escolhida: </div> <!-- Novo elemento -->
     </div>
     <script src="script.js"></script>
 </body>
