Ajustando css, deixando responsivo.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
                 <div class="cell"><img src="src/Lanceiro.png" alt="Image 5" id="img5"></div>
             </div>
         </div>
-        <button id="check-btn">Verificar</button>
-        <button id="reset-btn">Reiniciar</button>
-        <p id="feedback"></p>
-        <p id="attempts">Tentativas restantes: 3</p>
-        <div id="selected-sequence">Sequência Escolhida: </div> <!-- Novo elemento -->
+            <div class="container2"><button id="check-btn">Verificar</button>
+            <button id="reset-btn">Reiniciar</button>
+            <p id="feedback"></p>
+            <p id="attempts">Tentativas restantes: 3</p>
+            <div id="hints">Dica 1: Grave a sequência!</div>
+            <div id="hints">Dica 2: A sequência é a ordem em que cada personagem deve ficar!</div>
+            <div id="hints">Dica 3: Se acertou alguma casa, preste atenção de onde ela ficou na sequência para poder repetir!</div>
+            <div id="selected-sequence">Sequência Escolhida: </div> <!-- Novo elemento -->
     </div>
     <script src="script.js"></script>
 </body>
